src/objects/QPMS__CSMS_Junction__c.object
<CustomObject>
    <description>This is the junction object for CSMS module.</description>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds asset Profile Id.</description>
        <label>Asset Profile</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CAPA Object</description>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CalibrationParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CalibrationParent</description>
        <inlineHelpText>CalibrationParent</inlineHelpText>
        <label>CalibrationParent</label>
        <referenceTo>QPMS__Calibration__c</referenceTo>
        <relationshipLabel>CSMS_Junctions (CalibrationParent)</relationshipLabel>
        <relationshipName>CSMS_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calibration</label>
        <referenceTo>QPMS__Calibration__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__MaintenanceParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MaintenanceParent</description>
        <inlineHelpText>MaintenanceParent</inlineHelpText>
        <label>MaintenanceParent</label>
        <referenceTo>QPMS__Maintenance__c</referenceTo>
        <relationshipLabel>CSMS_Junctions (MaintenanceParent)</relationshipLabel>
        <relationshipName>CSMS_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance</label>
        <referenceTo>QPMS__Maintenance__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>CSMS_Junctions</relationshipLabel>
        <relationshipName>CSMS_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reference__c</fullName>
        <formula>IF(NOT(ISBLANK( QPMS__Non_Conformance__c )), ( QPMS__Non_Conformance__r.QPMS__Non_Conformance_Name__c ) , IF(NOT(ISBLANK( QPMS__CAPA__c )), ( QPMS__CAPA__r.QPMS__CAPA_Name__c ) , 
IF(NOT(ISBLANK( QPMS__Document_Profile__c )), ( QPMS__Document_Profile__r.Name ) , IF(NOT(ISBLANK( QPMS__Change_Management__c )), ( QPMS__Change_Management__r.QPMS__CR_Name__c) , IF(NOT(ISBLANK( QPMS__Calibration__c )), ( QPMS__Calibration__r.Name) , IF(NOT(ISBLANK( QPMS__Maintenance__c )), ( QPMS__Maintenance__r.Name) , &apos;&apos; ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <label>CSMS Junction</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSMS Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSMS_Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>